# gim

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: xtool.md
scripts/: test_compact.py
src/: cli.rs  error.rs  lib.rs  main.rs
src/commands/: add.rs  branch.rs  compact.rs  config_cmd.rs  defrag.rs  delete.rs  diff.rs  gc.rs  ignore_cmd.rs  list.rs  log_cmd.rs  migrate.rs  mod.rs  remove.rs  repack.rs  restore.rs  snap.rs  status.rs  unpack.rs
src/compact/: algorithm.rs  estimate.rs  game_running.rs  mod.rs  ntfs.rs  wof.rs
src/config/: gim_config.rs  mod.rs
src/db/: games.rs  mod.rs  schema.rs  snaps.rs
src/defrag/: admin.rs  bitmap.rs  file_map.rs  media.rs  mod.rs  move_file.rs  plan.rs  safety.rs  throttle.rs  volume.rs
src/hashing/: mod.rs
src/ignore_mod/: mod.rs
src/locking/: mod.rs
src/output/: color.rs  fmt.rs  mod.rs  progress.rs
src/parallel/: mod.rs
src/path_utils/: mod.rs
src/repack/: compression.rs  manifest.rs  mod.rs  profile_file.rs  profiles.rs  xtool.rs
src/storage/: cas.rs  mod.rs
src/walker/: mod.rs
xtool/: MANUAL.md
xtool/profiles/: lz4.gimprofile  lz4.toml  lzma.toml  oodle.gimprofile  zstd.gimprofile  zstd.toml
