[package]
name = "gim"
version = "0.4.0"
edition = "2021"
rust-version = "1.85"
authors = ["gim contributors"]
license = "MIT"
description = "Game files version control tool — git for game directories"
readme = "README.md"
keywords = ["cli", "version-control", "games", "snapshot", "backup"]
categories = ["command-line-utilities"]

[[bin]]
name = "gim"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.dev]
opt-level = 1

[dependencies]
clap = { version = "4.5.20", features = ["derive", "color", "wrap_help"] }
rusqlite = { version = "0.32.1", features = ["bundled", "blob", "chrono"] }
xxhash-rust = { version = "0.8.12", features = ["xxh3"] }
walkdir = "2.5.0"
ignore = "0.4.23"
globset = "0.4.15"
rayon = "1.10.0"
crossbeam-channel = "0.5.13"
anyhow = "1.0.91"
thiserror = "1.0.65"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
chrono = { version = "0.4.38", features = ["serde", "clock"] }
filetime = "0.2.25"
fs2 = "0.4.3"
colored = "2.1.0"
dirs = "5.0.1"
indicatif = "0.17.8"
log = "0.4.22"
env_logger = "0.11.5"

[dev-dependencies]
tempfile = "3.13.0"
assert_cmd = "2.0.16"
predicates = "3.1.2"
